# nm-ai-2026

./: .env.example  .gitignore  .yarnrc.yml  Dockerfile  LICENSE  OVERNIGHT_AGENT.md  PLAN.md  PLAYBOOK.md  README.md  astar.py  bun.lockb  dashboard.py  package-lock.json  package.json  prettier.ts  ralph.sh  requirements.txt  resubmit_prior.py  run.py  session_notes.md  store.py  tsconfig.json
challenges/grocery-bot-rs/: AGENT_PROMPT.md  Cargo.toml  README.md
challenges/grocery-bot-rs/maps/: easy_20260315_174243.json  expert_20260315_174527.json  hard_20260315_174338.json  medium.json  medium_20260315_173956.json
challenges/grocery-bot-rs/recordings/: easy_20260315_174243.json  medium_20260315_173956.json
challenges/grocery-bot-rs/replays/: easy_20260315_174243_score0.json  expert_20260315_174527_score0.json  (+3 more)
dashboard/: Dockerfile  (+2 more)
island_sim/: .env  AGENT_LOOP.md  CODE_REVIEW.md  DEVELOPMENT.md  README.md  launch_grid_search.py  pyproject.toml
island_sim/docs/: endpoints.md  overview.md  pipeline-architecture.excalidraw  quickstart.md  scoring.md  simulation-mechanics.md
island_sim/rust/: Cargo.toml
island_sim/scripts/: _vm_launch.sh  analyze_round_difficulty.py  calibrate.py  emergency_submit.py  error_analysis.py  fetch_history.py  gcp_cluster.sh  gcp_cluster_pull.sh  gcp_pull_results.sh  gcp_setup.sh  grid_search.py  grid_search_rust.py  smart_search.py  visualize.py
island_sim/src/: api_client.py  constants.py  orchestrator.py  scoring.py  types.py
island_sim/tests/: conftest.py  test_params.py  test_postprocess.py  test_scoring.py  test_sync.py
(+165 files in other folders)
