[package]
name = "grocery-bot-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "grocery-bot"
path = "src/main.rs"

[[bin]]
name = "simulate"
path = "src/simulate.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
